# crucibo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA.md  DECISIONS.md  GLOSSARY.md  HANDOFF.md  OVERVIEW.md  PROCESS.md  ROADMAP.md  STACK.md  VISION.md
experiments/: README.md
experiments/2026-06-11_aapl-daily-replay/: README.md
models/: README.md  dawnbreaker.npz  duskbringer.npz  sword_v1.npz
src/crucibo/: __init__.py  cli.py  features.py  io_parquet.py  mlp.py  models.py  settings.py
src/crucibo/alphavantage/: __init__.py  bars.py
src/crucibo/news/: __init__.py  feeds.py  rss.py
src/crucibo/polygon/: __init__.py  trades.py
src/crucibo/replay/: __init__.py  bundle.py  engine.py  strategies.py
tests/: bar_ticks.py  test_alphavantage_mapper.py  test_features.py  test_io_parquet.py  test_mlp.py  test_models.py  test_news_feeds.py  test_news_parquet.py  test_news_rss.py  test_polygon_mapper.py  test_replay_engine.py
