[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crucibo"
version = "0.1.0"
description = "US equities research sandbox — Alpha Vantage ingest, replay, simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "polars>=1.0",
    "pydantic>=2,<3",
]

[project.scripts]
crucibo = "crucibo.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
